[package]
name = "checker"
version = "0.1.0"
authors = ["sycured <60801403+sycured@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
dns-lookup = "1.0.8"
env_logger = "0.10.0"
futures = "0.3.27"
log = { version = "0.4.17", features = ["release_max_level_info"] }
rdkafka = { version = "0.29.0", features = ["cmake-build"] }
serde = "1"
serde_json = "1"
tokio = { version = "1.19.1", features = ["macros", "rt-multi-thread"] }

[profile.release]
lto = true

[profile.dev]
opt-level = "s"
lto = true