[package]
name = "rest_api_actix"
version = "0.1.0"
authors = ["sycured <60801403+sycured@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
config = "0.13.4"
env_logger = "0.10.1"
futures = "0.3.30"
ipaddress = "0.1.2"
log = "0.4.20"
paperclip = { version = "0.8.2", features = ["actix4"] }
rdkafka = { version = "0.36.1", features = ["cmake-build"] }
serde = "1"
serde_json = "1"

[dev-dependencies]
actix-rt = "2"

[profile.release]
lto = true

[profile.dev]
opt-level = "s"
lto = true